@@ -1,3 +1,6 @@
+2005-02-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ include/pqxx/transactor.hxx:
+  - Fixed incorrect comment, thanks Joshua Moore-Oliva
 2005-02-04  Jeroen T. Vermeulen <jtv@xs4all.nl>
  autogen.sh:
   - Fixed typo in automake check
